[package]
name = "norfs"
version = "0.0.0"
edition = "2021"
description = "Wear-leveling filesystem for embedded systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/card-io-ecg/norfs"
categories = ["embedded", "no-std", "filesystem"]
keywords = ["embedded", "no-std", "filesystem", "flash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version =  "1.1", optional = true }
embassy-futures = { version = "0.1.0" }
embedded-io = { version = "0.4.0", features = ["async"] }
heapless = "0.7"
log = { version = "0.4", optional = true }
defmt = { version = "0.3.5", optional = true }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
simple_logger = "4.1"

[features]
default = ["alloc"]
internal-flash = ["esp32s3"]
esp32s3 = ["internal-flash"]
critical-section = ["dep:critical-section"]
defmt = ["dep:defmt"]
log = ["dep:log"]
alloc = []
