[package]
name = "norfs-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", optional = true }
defmt = { version = "0.3.5", optional = true }

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]
