[package]
name = "norfs-esp32s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
norfs-driver = { path = "../norfs-driver" }

critical-section = { version =  "1.1", optional = true }
embassy-futures = { version = "0.1.0" }

[features]
critical-section = ["dep:critical-section"]
