[package]
name = "norfs-esp32s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-futures = "0.1.0"
norfs-driver = { path = "../norfs-driver" }

critical-section = { version =  "1.1", optional = true }

[features]
critical-section = ["dep:critical-section"]
