[package]
name = "norfs"
version = "0.0.0"
edition = "2021"
rust-version = "1.84.0"
description = "Wear-leveling filesystem for embedded systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/card-io-ecg/norfs"
categories = ["embedded", "no-std", "filesystem"]
keywords = ["embedded", "no-std", "filesystem", "flash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
norfs-driver = { path = "../norfs-driver" }

embedded-io-async = { version = "0.6.0" }
heapless07 = { package = "heapless", version = "0.7" }
heapless08 = { package = "heapless", version = "0.8" }
log = { version = "0.4", optional = true }
defmt = { version = "0.3.5", optional = true }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
simple_logger = "4.1"

[features]
default = ["alloc"]
defmt = ["dep:defmt", "norfs-driver/defmt"]
log = ["dep:log", "norfs-driver/log"]
alloc = []
